# prac_langchain

./: README.md
csv-qna-bot/: .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml
poet/: main.py
prac_vectorstore/: main.py  pyproject.toml
